@startuml layer-entities
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor White
  BorderColor #7D3C98
  HeaderBackgroundColor #E8DAEF
  FontName Arial
}
skinparam arrow {
  Color #7D3C98
}
skinparam note {
  BackgroundColor #FEF9E7
  BorderColor #F39C12
}

title Entity Layer — JPA Entities

' ══════════════════════════════════════════
'  ENTITY LAYER (main layer)
' ══════════════════════════════════════════
abstract class Media <<@Entity\n@Inheritance(JOINED)>> {
  - id : Long
  - title : String
  - director : String
  - price : BigDecimal
  - category : Category
  --
  + {abstract} getRentalDurationInDays() : int
  + getId() : Long
  + getTitle() : String
  + getDirector() : String
  + getPrice() : BigDecimal
  + getCategory() : Category
}

class Movie <<@Entity>> {
  - duration : int
  --
  + getRentalDurationInDays() : int
  + getDuration() : int
}
note right of Movie : 1 day rental

class Serie <<@Entity>> {
  - seasons : int
  - episodes : int
  --
  + getRentalDurationInDays() : int
  + getSeasons() : int
  + getEpisodes() : int
}
note right of Serie : 30 days rental

class Category <<@Entity>> {
  - id : Long
  - name : String
  --
  + getId() : Long
  + getName() : String
}

class User <<@Entity\n@Table(APPLICATION_USER)>> {
  - id : long
  - lastname : String
  - firstname : String
  - balance : BigDecimal
  --
  + getId() : long
  + getLastname() : String
  + getFirstname() : String
  + getBalance() : BigDecimal
  + setBalance(BigDecimal) : void
}
note right of User
  Table: APPLICATION_USER
  password & role NOT mapped in JPA
  — WildFly reads them directly via
  j_security_check (form login)
end note

class Rental <<@Entity>> {
  - id : Long
  - rentalStart : LocalDateTime
  - rentalEnd : LocalDateTime
  - appliedPrice : BigDecimal
  - user : User
  - media : Media
  --
  + isExpired() : boolean
  + getUser() : User
  + getMedia() : Media
}
note bottom of Rental
  appliedPrice = price snapshot at
  rental time, independent of
  future catalogue changes
end note

' Inheritance
Media <|-- Movie
Media <|-- Serie

' Associations
Media  "0..*" --> "0..1" Category : category\n@ManyToOne LAZY
Rental "0..*" --> "1"    User     : viewer_id\n@ManyToOne LAZY\ncascade PERSIST, MERGE
Rental "0..*" --> "1"    Media    : media\n@ManyToOne LAZY

' ══════════════════════════════════════════
'  SERVICE LAYER (external — simplified)
' ══════════════════════════════════════════
skinparam class {
  BackgroundColor #F2F3F4
  BorderColor #AAB7B8
  HeaderBackgroundColor #EAECEE
  FontColor #626567
}

class MediaService  <<service>>
class RentalService <<service>>
class UserService   <<service>>

' ══════════════════════════════════════════
'  Usage arrows (service → entity)
' ══════════════════════════════════════════
MediaService  ..> Media    : uses
MediaService  ..> Category : uses
RentalService ..> Rental   : uses
RentalService ..> User     : uses
RentalService ..> Media    : uses
UserService   ..> User     : uses

@enduml
